lanmine_41/kubernetes/apps/monitoring/alertmanager-ingress-lanmine.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-lanmine
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: alertmanager.lanmine.local
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - alertmanager.lanmine.local
      secretName: alertmanager-lanmine-tls
  rules:
    - host: alertmanager.lanmine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
